Updated height measurements

--- a/data measurements.ipynb
+++ b/data measurements.ipynb
@@ -2,23 +2,24 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
-    "import numpy as np"
+    "import numpy as np\n",
+    "from scipy import stats"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
     "# pendulum measurements\n",
     "\n",
     "H_tape = np.array([21.886, 21.891, 21.897, 21.891, 21.908]) #[m]\n",
-    "H_tape_err = 0.005 #[m]\n",
+    "H_tape_err = 0.005#[m]\n",
     "\n",
     "H_laser = np.array([22.153, 22.154, 22.153, 22.152, 22.152]) #[m]\n",
     "H_laser_err = 0.001 #[m]\n",
@@ -27,12 +28,18 @@
     "H_weight_err = 0.001 #[m]\n",
     "\n",
     "H_floor_to_weight = np.array([0.152, 0.153, 0.153, 0.1535, 0.154]) #[m]\n",
-    "H_floor_to_weight_err = 0.001 #[m]"
+    "H_floor_to_weight_err = 0.001 #[m]\n",
+    "\n",
+    "H_tape = H_tape + H_weight/2\n",
+    "H_tape_err = H_tape_err + H_weight_err\n",
+    "\n",
+    "H_laser = H_laser - H_floor_to_weight + H_weight/2\n",
+    "H_laser_err = H_laser_err + H_floor_to_weight_err + H_weight_err"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
